fixed illegible text

--- a/styles/popups.module.css
+++ b/styles/popups.module.css
@@ -39,10 +39,6 @@
     background-color: rgba(54, 54, 54, 0.5);
     backdrop-filter: blur(5px);
 }
-.wrapper a {
-    text-decoration: underline;
-    color: var(--theme-color);
-}
 
 @media screen and (max-width: 500px) {
     .wrapper {
